cmake_minimum_required(VERSION 3.1)
project(QCSimulatorRoot)
set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")
find_package(CUDA REQUIRED)
find_package(OpenMP REQUIRED)
find_package(Nccl REQUIRED)
find_package(MPI REQUIRED)

find_library(CUTT cutt "${PROJECT_SOURCE_DIR}/third-party/cutt/cutt/lib")
include_directories(${PROJECT_SOURCE_DIR}/third-party/cutt/cutt/include)
include_directories(${PROJECT_SOURCE_DIR}/third-party/dbg-macro)
MESSAGE(STATUS "Found CUTT: ${CUTT}")

set(CMAKE_CXX_FLAGS "-std=c++14 -O2 -g -Wall ${OpenMP_CXX_FLAGS}")
set(CUDA_NVCC_FLAGS "-Xcompiler -fopenmp -std=c++14 -O2 -g -arch=compute_70 -code=sm_70 --ptxas-options=-v -lineinfo -keep")
set(BACKEND "group" CACHE STRING "Backend mode, one of [serial, group, group-serial, blas, mix, blas-advance]")
MESSAGE(STATUS "Backend: ${BACKEND}")

option(SHOW_SCHEDULE "Print the schedule" ON)
option(SHOW_SUMMARY "Show the running details" ON)
option(MEASURE_STAGE "Measure time of each stage" OFF)
option(MICRO_BENCH "Compile micro-benchmarks" OFF)
option(EVALUATOR_PREPROCESS "compile evaluator preprocess" OFF)
option(DISABLE_ASSERT "Use assert in cuda runtime" ON)
option(USE_DOUBLE "double or float" ON)
option(ENABLE_OVERLAP "overlap" ON)
option(USE_MPI "use mpi" OFF)
option(OVERLAP_MAT "overlap initMatirx" ON)
option(LOG_EVALUATOR "show logging of evaluator" OFF)
option(IMPERATIVE "imperative mode" OFF)

if (BACKEND STREQUAL "serial")
    add_definitions(-DBACKEND=0)
elseif(BACKEND STREQUAL "group")
    add_definitions(-DBACKEND=1)
elseif(BACKEND STREQUAL "group-serial")
    add_definitions(-DBACKEND=2)
elseif(BACKEND STREQUAL "blas")
    add_definitions(-DBACKEND=3)
elseif(BACKEND STREQUAL "mix")
    add_definitions(-DBACKEND=4)
elseif(BACKEND STREQUAL "blas-advance")
    add_definitions(-DBACKEND=5)
else()
    MESSAGE(ERROR "invalid mode")
endif()

if (SHOW_SCHEDULE)
    add_definitions(-DSHOW_SCHEDULE)
endif(SHOW_SCHEDULE)
if (SHOW_SUMMARY)
    add_definitions(-DSHOW_SUMMARY)
endif(SHOW_SUMMARY)
if (MEASURE_STAGE)
    add_definitions(-DMEASURE_STAGE)
endif(MEASURE_STAGE)
if (DISABLE_ASSERT)
    add_definitions(-DNDEBUG)
else()
    add_definitions(-DDEBUG)
endif(DISABLE_ASSERT)
if (ENABLE_OVERLAP)
    add_definitions(-DENABLE_OVERLAP)
endif(ENABLE_OVERLAP)
if (USE_DOUBLE)
    MESSAGE(STATUS "Float type: Double")
    add_definitions(-DUSE_DOUBLE)
else()
    MESSAGE(STATUS "Float type: Float")
endif(USE_DOUBLE)
if (OVERLAP_MAT)
    add_definitions(-DOVERLAP_MAT)
endif(OVERLAP_MAT)

if (USE_MPI)
    add_definitions(-DUSE_MPI=1)
else()
    add_definitions(-DUSE_MPI=0)
endif(USE_MPI)

if (IMPERATIVE)
    add_definitions(-DIMPERATIVE)
endif(IMPERATIVE)

set(COALESCE "3" CACHE STRING "coalescing size")
MESSAGE(STATUS "coalesce = ${COALESCE}")
add_definitions(-DCOALESCE_GLOBAL_DEFINED=${COALESCE})

set(MAT "6" CACHE STRING "mat size")
MESSAGE(STATUS "mat size = ${MAT}")
add_definitions(-DBLAS_MAT_LIMIT_DEFINED=${MAT})

set(MIN_MAT "4" CACHE STRING "min mat size")
MESSAGE(STATUS "min mat size = ${MIN_MAT}")
add_definitions(-DMIN_MAT_SIZE_DEFINED=${MIN_MAT})

set(THREAD_DEP "7" CACHE STRING "thread dep")
MESSAGE(STATUS "thread_dep = ${THREAD_DEP}")
add_definitions(-DTHREAD_DEP_DEFINED=${THREAD_DEP})

set(INPLACE "0" CACHE STRING "fixed local size")
MESSAGE(STATUS "INPLACE = ${INPLACE}")
add_definitions(-DINPLACE=${INPLACE})

set(MAX_SLICE "20" CACHE STRING "max slice in inplace mode")
MESSAGE(STATUS "MAX_SLICE = ${MAX_SLICE}")
add_definitions(-DMAX_SLICE=${MAX_SLICE})

set(MPI_GPU_GROUP_SIZE "1" CACHE STRING "proc. that share the same GPU")
MESSAGE(STATUS "MPI_GPU_GROUP_SIZE = ${MPI_GPU_GROUP_SIZE}")
add_definitions(-DMPI_GPU_GROUP_SIZE=${MPI_GPU_GROUP_SIZE})

if (NOT ${INPLACE} EQUAL "0" AND ${ENABLE_OVERLAP})
    MESSAGE(FATAL_ERROR "Do not support INPLACE and ENABLE_OVERLAP simultaneously")
endif()

set(REDUCE_BLOCK_DEP "6" CACHE STRING "each thread handles 1<<dep numbers in reduce sum")
MESSAGE(STATUS "REDUCE_BLOCK_DEP = ${REDUCE_BLOCK_DEP}")
add_definitions(-DREDUCE_BLOCK_DEP_DEFINED=${REDUCE_BLOCK_DEP})

if (EVALUATOR_PREPROCESS)
    set(PROCESS process)
    add_executable(process evaluator-preprocess/process.cpp)
    target_link_libraries(process QCSimulator ${CUTT} ${OpenMP_CXX_FLAGS} ${CUDA_CUBLAS_LIBRARIES} ${MPI_CXX_LIBRARIES} ${NCCL_LIBRARY})
    add_definitions(-DUSE_EVALUATOR_PREPROCESS)
endif(EVALUATOR_PREPROCESS)

if(LOG_EVALUATOR)
    add_definitions(-DLOG_EVALUATOR)
endif(LOG_EVALUATOR)

include_directories ("${PROJECT_SOURCE_DIR}/src")
add_subdirectory("src")
if (NOT(IMPERATIVE))
    add_executable(main main.cpp)
    target_link_libraries(main QCSimulator ${CUTT} ${OpenMP_CXX_FLAGS} ${CUDA_CUBLAS_LIBRARIES} ${MPI_CXX_LIBRARIES} ${NCCL_LIBRARY})
endif (NOT(IMPERATIVE))

if (MICRO_BENCH)
    set(BENCHMARKS local-single local-ctr two-group-h bench-blas measure-perf)
    foreach(BENCHMARK IN LISTS BENCHMARKS)
        add_executable(${BENCHMARK} micro-benchmark/${BENCHMARK}.cpp)
        target_link_libraries(${BENCHMARK} QCSimulator ${CUTT} ${OpenMP_CXX_FLAGS} ${CUDA_CUBLAS_LIBRARIES} ${MPI_CXX_LIBRARIES} ${NCCL_LIBRARY})
    endforeach(BENCHMARK IN LISTS BENCHMARKS)
endif(MICRO_BENCH)
